--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </div>
 
 <center><p>
-    <a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank"><img src="https://shici.yhz610.com/upyun.png" style="height: 25px;"></a>
+    <a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral" target="_blank"><img src="https://cdn.yhz610.com/pic/upyun.png" style="height: 25px;"></a>
 	<a style="color: #a0a0a0; font-size: 13px;">提供cdn加速/云存储服务</a>
 <br>
 <a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank" style="color: #a0a0a0; font-size: 13px;">鄂ICP备2021000158号</a>
