--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <style>
     </style>
-
+<meta name="google-site-verification" content="U6HWBsViYJxl9IGBoLrFmHvhEoypZbMP2GwFLsyNcS4" />
     </head>
     
     <body>
