--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
         <meta name="author"  content="shi">
         <meta name="description" content="中华古诗词,古诗词学习,诗词大全,诗词名句">
         <meta name="keywords"  content="诗词,古诗词,唐诗,宋词,诗经,三字经,唐诗三百首,宋词三百首,诗词大全,诗词名句">
+        <script defer src="https://tj.yhz610.com/script.js" data-website-id="9343a399-5fc2-47c2-894c-30e3e4a2badc"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/global.css?v=3334">
         <link rel="stylesheet" href="./assets/theme.css">
         <link rel="stylesheet" href="./assets/semantic/components/site.min.css">
         <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="./assets/favicon/site.webmanifest">
-<link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="./assets/favicon/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="./assets/favicon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./assets/semantic/components/container.min.css">
-    <link rel="stylesheet" href="./assets/semantic/components/grid.min.css">
-    <link rel="stylesheet" href="./assets/semantic/components/card.min.css">
-    <link rel="stylesheet" href="./assets/semantic/components/icon.min.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./assets/favicon/site.webmanifest">
+        <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="./assets/semantic/components/container.min.css">
+        <link rel="stylesheet" href="./assets/semantic/components/grid.min.css">
+        <link rel="stylesheet" href="./assets/semantic/components/card.min.css">
+        <link rel="stylesheet" href="./assets/semantic/components/icon.min.css">
 
     <style>
     </style>
